--- a/index.html
+++ b/index.html
@@ -872,6 +872,79 @@
     </section>
 
     <!-- POR QUÉ EXISTE -->
+    <!-- ARTÍCULO: ¿Cuántas calorías se queman al caminar? -->
+    <section id="calorias-caminando" class="section">
+      <h2 class="section-title">¿Cuántas calorías se queman al caminar?</h2>
+      <p class="section-sub">
+        La cantidad de calorías que se queman caminando depende principalmente del peso corporal,
+        la duración de la caminata y la intensidad o velocidad. En promedio, una persona puede
+        quemar entre 180 y 280 calorías por hora de caminata moderada, pero lo ideal es calcularlo
+        de forma más precisa según cada caso.
+      </p>
+
+      <div class="cards-grid">
+        <article class="card-simple">
+          <h3>Valores de referencia generales</h3>
+          <p>
+            De forma aproximada, una caminata moderada puede generar el siguiente gasto calórico
+            en una hora:
+          </p>
+          <ul class="list">
+            <li>50 kg: 160 a 190 kcal por hora.</li>
+            <li>60 kg: 180 a 220 kcal por hora.</li>
+            <li>70 kg: 220 a 260 kcal por hora.</li>
+            <li>80 kg: 260 a 300 kcal por hora.</li>
+            <li>90 kg: 300 a 340 kcal por hora.</li>
+          </ul>
+          <p>
+            Estos valores son orientativos. Factores como la edad, el terreno, la condición
+            física y la postura pueden modificar el resultado real.
+          </p>
+        </article>
+
+        <article class="card-simple">
+          <h3>Influencias principales en el gasto calórico</h3>
+          <p>
+            El gasto energético al caminar aumenta o disminuye en función de varios elementos:
+          </p>
+          <ul class="list">
+            <li><strong>Peso corporal:</strong> a mayor peso, mayor gasto calórico.</li>
+            <li><strong>Velocidad:</strong> caminar rápido incrementa de forma notable el consumo de energía.</li>
+            <li><strong>Terreno:</strong> subidas, pendientes o superficies irregulares exigen más esfuerzo.</li>
+            <li><strong>Duración:</strong> a más minutos de caminata, mayor suma total de calorías.</li>
+            <li><strong>Carga adicional:</strong> caminar con mochila o peso extra (rucking) puede aumentar el gasto entre un 20% y un 50%.</li>
+          </ul>
+        </article>
+
+        <article class="card-simple">
+          <h3>Usar la calculadora para un dato más preciso</h3>
+          <p>
+            Las tablas y valores generales son útiles para tener una idea rápida, pero si se busca
+            una estimación más ajustada a la realidad, es recomendable utilizar una herramienta
+            específica.
+          </p>
+          <p>
+            En ViveActivo se puede calcular el gasto calórico estimado a partir de:
+          </p>
+          <ul class="list">
+            <li>Peso corporal.</li>
+            <li>Tiempo de caminata.</li>
+            <li>Intensidad o percepción de esfuerzo.</li>
+            <li>Opcional: peso adicional y distancia aproximada.</li>
+          </ul>
+          <p>
+            <a href="#calculadoras">Ir a las calculadoras de caminata</a>
+          </p>
+        </article>
+      </div>
+
+      <p class="section-sub" style="margin-top: 1rem;">
+        La caminata es una forma sencilla y accesible de aumentar el gasto calórico diario. No requiere
+        equipamiento especial, es de bajo impacto y se adapta a distintos niveles de condición física.
+        La clave está en la constancia y en entender qué aporta cada sesión dentro del objetivo general.
+      </p>
+    </section>
+
     <section class="section">
       <h2 class="section-title">Por qué existe ViveActivo</h2>
       <p class="section-sub">
