--- a/index.html
+++ b/index.html
@@ -562,8 +562,10 @@
           <span>Necesitas un método sostenible.</span>
         </h1>
         <p>
-          La caminata es el puente entre la vida diaria y los resultados que se buscan.
-          Una herramienta accesible y poderosa para mejorar el bienestar, tanto si se está empezando, retomando o ya se entrena desde hace años.
+          La caminata es una base sólida, pero ViveActivo va más allá: combina movimiento diario,
+fuerza sencilla y hábitos claros para ayudar a bajar de peso, mejorar el bienestar y
+despejar la mente sin rutinas extremas.
+
         </p>
         <button class="btn btn-primary" onclick="document.getElementById('calculadoras').scrollIntoView({behavior:'smooth'})">
           Ver cálculos de caminata →
@@ -871,6 +873,51 @@
       </div>
     </section>
 
+    <!-- NOTAS Y GUÍAS -->
+    <section id="notas" class="section">
+      <h2 class="section-title">Notas y guías</h2>
+      <p class="section-sub">
+        Aquí se agrupan artículos con explicaciones sencillas sobre caminata, gasto calórico
+        y movimiento diario. Cada guía se conecta con las herramientas de ViveActivo para
+        que sea más fácil pasar de la teoría a la acción.
+      </p>
+
+      <div class="cards-grid">
+        <!-- Nota 1 -->
+        <article class="card-simple">
+          <h3>¿Cuántas calorías se queman al caminar?</h3>
+          <p>
+            Explicación clara de cómo influyen el peso corporal, el tiempo, la velocidad
+            y la carga adicional en el gasto calórico de la caminata.
+          </p>
+          <p>
+            <a href="#calorias-caminando">Leer guía completa →</a>
+          </p>
+        </article>
+       <article class="card-simple">
+        <h3>Caminar para despejar la mente</h3>
+         <p>
+          Cómo usar la caminata como una pausa consciente para reducir el estrés, ordenar
+          ideas y recuperar claridad sin necesidad de técnicas complicadas.
+          </p>
+         <p>
+        <a href="#caminar-para-despejar-la-mente">Leer guía completa →</a>
+      </p>
+    </article>
+
+
+        <!-- Cuando haya nuevas notas, se agregan más artículos aquí -->
+        <!--
+        <article class="card-simple">
+          <h3>Título de la siguiente nota</h3>
+          <p>Resumen breve de lo que explica la guía.</p>
+          <p><a href="#id-de-la-nota">Leer guía completa →</a></p>
+        </article>
+        -->
+      </div>
+    </section>
+
+
     <!-- POR QUÉ EXISTE -->
     <!-- ARTÍCULO: ¿Cuántas calorías se queman al caminar? -->
     <section id="calorias-caminando" class="section">
@@ -944,12 +991,88 @@
         La clave está en la constancia y en entender qué aporta cada sesión dentro del objetivo general.
       </p>
     </section>
+<!-- ARTÍCULO: Caminar para despejar la mente -->
+<section id="caminar-para-despejar-la-mente" class="section">
+  <h2 class="section-title">Caminar para despejar la mente</h2>
+  <p class="section-sub">
+    Además de ayudar con el gasto calórico, la caminata puede funcionar como una
+    herramienta sencilla para reducir el estrés, ordenar pensamientos y recuperar
+    una sensación de calma. No requiere técnica avanzada ni preparación especial:
+    se trata de caminar con un poco más de intención.
+  </p>
+
+  <div class="cards-grid">
+    <article class="card-simple">
+      <h3>Beneficios mentales de la caminata</h3>
+      <p>
+        Caminar de forma regular puede aportar varios efectos positivos a nivel mental:
+      </p>
+      <ul class="list">
+        <li>Disminución de la tensión acumulada durante el día.</li>
+        <li>Mejora del estado de ánimo gracias al movimiento y al entorno.</li>
+        <li>Espacio para pensar sin interrupciones constantes.</li>
+        <li>Sensación de logro simple: salir, caminar y volver.</li>
+      </ul>
+      <p>
+        No reemplaza un tratamiento profesional cuando es necesario, pero sí puede
+        ser un apoyo concreto en la vida diaria.
+      </p>
+    </article>
+
+    <article class="card-simple">
+      <h3>Cómo usar la caminata como pausa mental</h3>
+      <p>
+        No es indispensable contar pasos ni tiempos exactos para que la caminata
+        ayude a despejar la mente. Algunas ideas prácticas:
+      </p>
+      <ul class="list">
+        <li>Elegir un recorrido sencillo y seguro que se conozca de memoria.</li>
+        <li>Dejar el teléfono en silencio o en modo avión durante unos minutos.</li>
+        <li>Prestar atención al ritmo de los pasos y a la respiración.</li>
+        <li>Permitir que las ideas aparezcan sin necesidad de resolver todo al instante.</li>
+      </ul>
+      <p>
+        Estas caminatas pueden durar 10, 20 o 30 minutos. Lo importante es que
+        se conviertan en un espacio fijo en la rutina.
+      </p>
+    </article>
+
+    <article class="card-simple">
+      <h3>Combinar mente y cuerpo en ViveActivo</h3>
+      <p>
+        En ViveActivo, la caminata se integra con otras piezas del bienestar:
+        algo de fuerza, descanso adecuado y claridad en la alimentación.
+      </p>
+      <p>
+        Utilizar la caminata como momento para despejar la mente puede hacer que
+        sea más sencillo sostener otros cambios, como organizar mejor las comidas
+        o respetar horarios de sueño.
+      </p>
+      <p>
+        <a href="#calculadoras">Usar las calculadoras de caminata</a> para
+        tener una referencia del gasto calórico, y al mismo tiempo mantener
+        el enfoque en cómo se siente cada salida, no solo en los números.
+      </p>
+    </article>
+  </div>
+
+  <p class="section-sub" style="margin-top: 1rem;">
+    Convertir la caminata en una pausa para la mente no requiere rituales
+    complejos. Basta con reservar un tramo del día para salir, moverse y
+    crear un pequeño espacio propio. A partir de allí, se vuelve más fácil
+    tomar mejores decisiones para el cuerpo y para la vida diaria.
+  </p>
+</section>
+
 
     <section class="section">
       <h2 class="section-title">Por qué existe ViveActivo</h2>
       <p class="section-sub">
-        ViveActivo nace de alguien que entrena, trabaja, tiene familia y sabe lo que es mirar el reloj todo el día.
-      </p>
+  ViveActivo nace de una idea simple: muchas personas intentan planes exigentes que no se
+  adaptan a su vida diaria y terminan abandonando. La propuesta es construir un método
+  sostenible que combine caminatas, fuerza accesible, descanso y claridad en la alimentación,
+  con un enfoque realista para el cuerpo y también para la mente.
+</p>
       <ul class="list">
         <li>Porque no todos pueden entrenar 6 veces por semana.</li>
         <li>Porque la culpa y el “todo o nada” no sirven a largo plazo.</li>
