--- a/index.html
+++ b/index.html
@@ -536,6 +536,16 @@
       }
     }
   </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X791HK4NMY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X791HK4NMY');
+</script>
+
 </head>
 <body>
   <div class="page">
