--- a/index.html
+++ b/index.html
@@ -914,6 +914,15 @@ despejar la mente sin rutinas extremas.
         <a href="#caminar-para-despejar-la-mente">Leer guía completa →</a>
       </p>
     </article>
+     <article class="card-simple">
+      <h3>Caminata para bajar de peso</h3>
+       <p>
+       Cómo usar la caminata como herramienta principal para entrar en déficit calórico sin dietas extremas ni rutinas imposibles de sostener.
+      </p>
+      <p>
+       <a href="#caminata-para-bajar-de-peso">Leer guía completa →</a>
+     </p>
+     </article>
 
 
         <!-- Cuando haya nuevas notas, se agregan más artículos aquí -->
@@ -1073,7 +1082,73 @@ despejar la mente sin rutinas extremas.
     tomar mejores decisiones para el cuerpo y para la vida diaria.
   </p>
 </section>
+<!-- ARTÍCULO: Caminata para bajar de peso -->
+<section id="caminata-para-bajar-de-peso" class="section">
+  <h2 class="section-title">Caminata para bajar de peso</h2>
 
+  <p class="section-sub">
+    Bajar de peso no requiere rutinas agotadoras ni dietas extremas. La caminata es una herramienta poderosa para entrar en déficit calórico de manera sencilla, sostenible y realista. Con la intensidad adecuada y la constancia, puede convertirse en el pilar principal de un plan efectivo para mejorar la composición corporal.
+  </p>
+
+  <div class="cards-grid">
+
+    <article class="card-simple">
+      <h3>Por qué caminar ayuda a bajar de peso</h3>
+      <p>La caminata funciona por tres razones simples:</p>
+      <ul class="list">
+        <li><strong>Gasto calórico estable:</strong> no es explosivo, pero suma todos los días.</li>
+        <li><strong>Bajo estrés físico:</strong> lo que permite repetirla sin agotarte.</li>
+        <li><strong>Menos hambre reactiva:</strong> a diferencia del ejercicio intenso, no dispara tanto el apetito.</li>
+      </ul>
+      <p>
+        Además, caminar mejora el estado de ánimo y reduce la ansiedad, lo que facilita tomar mejores decisiones alimentarias.
+      </p>
+    </article>
+
+    <article class="card-simple">
+      <h3>Cómo caminar para perder grasa</h3>
+      <p>La clave no es caminar “mucho”, sino hacerlo de una forma estratégica y sostenible.</p>
+
+      <ul class="list">
+        <li><strong>Duración sugerida:</strong> 30 a 45 minutos, 4 a 6 veces por semana.</li>
+        <li><strong>Ritmo:</strong> moderado; que puedas hablar, pero no cantar.</li>
+        <li><strong>Consistencia:</strong> más importante que la intensidad.</li>
+        <li><strong>Sumar pasos diarios:</strong> moverte más durante el día cuenta tanto como la caminata formal.</li>
+      </ul>
+      <p>
+        Si hoy caminás 20 minutos, no hace falta duplicarlo mañana. Aumentar de a poco siempre funciona mejor.
+      </p>
+    </article>
+
+    <article class="card-simple">
+      <h3>Entrar en déficit sin sufrir</h3>
+      <p>Bajar de peso ocurre cuando gastás más de lo que consumís. La caminata ayuda porque:</p>
+
+      <ul class="list">
+        <li>No aumenta el hambre tanto como correr.</li>
+        <li>No te lesiona, por lo que podés repetirla muchas veces.</li>
+        <li>Permite sumar calorías gastadas sin sentir que “estás haciendo ejercicio”.</li>
+      </ul>
+
+      <p>Para acelerar resultados:</p>
+      <ul class="list">
+        <li>Combiná caminata + fuerza simple 2 veces por semana.</li>
+        <li>Dormí 7–8 horas para controlar el apetito.</li>
+        <li>Elegí comidas con buena saciedad (proteína, frutas, verduras).</li>
+      </ul>
+
+      <p>
+        <a href="#calculadoras">Usar la calculadora de caminata</a> para estimar gasto calórico diario.
+      </p>
+    </article>
+
+  </div>
+
+  <p class="section-sub" style="margin-top: 1rem;">
+    La caminata es más poderosa de lo que parece: combina movimiento, déficit calórico, claridad mental y constancia. Con pequeñas mejoras semanales, los resultados se acumulan y se vuelven estables sin sentir que estás “a dieta” o “entrenando duro”.
+  </p>
+
+</section>
 
     <section class="section">
       <h2 class="section-title">Por qué existe ViveActivo</h2>
