--- a/index.html
+++ b/index.html
@@ -915,14 +915,14 @@ despejar la mente sin rutinas extremas.
       </p>
     </article>
      <article class="card-simple">
-      <h3>Caminata para bajar de peso</h3>
-       <p>
-       Cómo usar la caminata como herramienta principal para entrar en déficit calórico sin dietas extremas ni rutinas imposibles de sostener.
-      </p>
-      <p>
-       <a href="#caminata-para-bajar-de-peso">Leer guía completa →</a>
-     </p>
-     </article>
+  <h3>Déficit calórico: la guía simple y definitiva</h3>
+  <p>
+    Qué es realmente el déficit calórico, cómo se crea sin dietas extremas y cómo mantenerlo sin pasar hambre.
+  </p>
+  <p>
+    <a href="#deficit-calorico">Leer guía completa →</a>
+  </p>
+</article>
 
 
         <!-- Cuando haya nuevas notas, se agregan más artículos aquí -->
@@ -935,9 +935,18 @@ despejar la mente sin rutinas extremas.
         -->
       </div>
     </section>
+      <article class="card-simple">
+  <h3>Rucking: caminar con peso para quemar más energía</h3>
+  <p>
+    En qué consiste el rucking, cómo empezar de forma segura y cómo usarlo como
+    herramienta extra para aumentar el gasto calórico sin necesidad de correr.
+  </p>
+  <p>
+    <a href="#rucking">Leer guía completa →</a>
+  </p>
+</article>
 
-
-    <!-- POR QUÉ EXISTE -->
+     <!-- POR QUÉ EXISTE -->
     <!-- ARTÍCULO: ¿Cuántas calorías se queman al caminar? -->
     <section id="calorias-caminando" class="section">
       <h2 class="section-title">¿Cuántas calorías se queman al caminar?</h2>
@@ -1082,73 +1091,148 @@ despejar la mente sin rutinas extremas.
     tomar mejores decisiones para el cuerpo y para la vida diaria.
   </p>
 </section>
-<!-- ARTÍCULO: Caminata para bajar de peso -->
-<section id="caminata-para-bajar-de-peso" class="section">
-  <h2 class="section-title">Caminata para bajar de peso</h2>
+<!-- ARTÍCULO: Déficit calórico -->
+<section id="deficit-calorico" class="section">
+  <h2 class="section-title">Déficit calórico: la guía simple y definitiva</h2>
 
   <p class="section-sub">
-    Bajar de peso no requiere rutinas agotadoras ni dietas extremas. La caminata es una herramienta poderosa para entrar en déficit calórico de manera sencilla, sostenible y realista. Con la intensidad adecuada y la constancia, puede convertirse en el pilar principal de un plan efectivo para mejorar la composición corporal.
+    El déficit calórico es el pilar más importante para bajar de peso. No importa el plan, la dieta o el ejercicio: si no existe déficit, no hay pérdida de grasa. Y lo mejor es que se puede lograr de manera simple, sin dietas estrictas ni entrenamientos agotadores.
   </p>
 
   <div class="cards-grid">
 
     <article class="card-simple">
-      <h3>Por qué caminar ayuda a bajar de peso</h3>
-      <p>La caminata funciona por tres razones simples:</p>
-      <ul class="list">
-        <li><strong>Gasto calórico estable:</strong> no es explosivo, pero suma todos los días.</li>
-        <li><strong>Bajo estrés físico:</strong> lo que permite repetirla sin agotarte.</li>
-        <li><strong>Menos hambre reactiva:</strong> a diferencia del ejercicio intenso, no dispara tanto el apetito.</li>
-      </ul>
+      <h3>¿Qué es el déficit calórico?</h3>
       <p>
-        Además, caminar mejora el estado de ánimo y reduce la ansiedad, lo que facilita tomar mejores decisiones alimentarias.
+        Es la diferencia entre lo que tu cuerpo gasta y lo que consumís. Si gastás más energía de la que ingresás, usás tus reservas (grasa) para compensar.
+      </p>
+
+      <ul class="list">
+        <li><strong>Gasto energético:</strong> pasos, caminata, fuerza, digestión, metabolismo basal.</li>
+        <li><strong>Ingesta energética:</strong> todo lo que comés y bebés.</li>
+      </ul>
+
+      <p>
+        No es magia. Es fisiología. Pero el truco está en hacerlo sostenible.
       </p>
     </article>
 
     <article class="card-simple">
-      <h3>Cómo caminar para perder grasa</h3>
-      <p>La clave no es caminar “mucho”, sino hacerlo de una forma estratégica y sostenible.</p>
+      <h3>Cómo crear un déficit sin pasar hambre</h3>
+      <p>Los métodos extremos fallan porque no son sostenibles. En ViveActivo priorizamos lo contrario: que puedas sostenerlo sin sufrir.</p>
 
       <ul class="list">
-        <li><strong>Duración sugerida:</strong> 30 a 45 minutos, 4 a 6 veces por semana.</li>
-        <li><strong>Ritmo:</strong> moderado; que puedas hablar, pero no cantar.</li>
-        <li><strong>Consistencia:</strong> más importante que la intensidad.</li>
-        <li><strong>Sumar pasos diarios:</strong> moverte más durante el día cuenta tanto como la caminata formal.</li>
+        <li><strong>Elegir alimentos de alta saciedad:</strong> carnes magras, huevos, frutas, verduras, legumbres.</li>
+        <li><strong>Aumentar el movimiento diario:</strong> pasos, pequeñas caminatas, rucking suave.</li>
+        <li><strong>Entrenamiento de fuerza:</strong> poco volumen, pero constante.</li>
+        <li><strong>Descanso adecuado:</strong> dormir 7–8 horas mejora el control del apetito.</li>
       </ul>
+
       <p>
-        Si hoy caminás 20 minutos, no hace falta duplicarlo mañana. Aumentar de a poco siempre funciona mejor.
+        La clave: <strong>sentir menos hambre</strong>, no “tener más fuerza de voluntad”.
       </p>
     </article>
 
     <article class="card-simple">
-      <h3>Entrar en déficit sin sufrir</h3>
-      <p>Bajar de peso ocurre cuando gastás más de lo que consumís. La caminata ayuda porque:</p>
-
+      <h3>Cómo saber tu déficit real</h3>
+      <p>La forma más precisa es observar tendencias, no números exactos.</p>
       <ul class="list">
-        <li>No aumenta el hambre tanto como correr.</li>
-        <li>No te lesiona, por lo que podés repetirla muchas veces.</li>
-        <li>Permite sumar calorías gastadas sin sentir que “estás haciendo ejercicio”.</li>
-      </ul>
-
-      <p>Para acelerar resultados:</p>
-      <ul class="list">
-        <li>Combiná caminata + fuerza simple 2 veces por semana.</li>
-        <li>Dormí 7–8 horas para controlar el apetito.</li>
-        <li>Elegí comidas con buena saciedad (proteína, frutas, verduras).</li>
+        <li><strong>Si el peso baja en 2 a 3 semanas:</strong> estás en déficit.</li>
+        <li><strong>Si se estanca:</strong> estás en mantenimiento (que no es malo).</li>
+        <li><strong>Si sube:</strong> estás en superávit.</li>
       </ul>
 
       <p>
-        <a href="#calculadoras">Usar la calculadora de caminata</a> para estimar gasto calórico diario.
+        Nuestra herramienta de cálculo (próximamente) te dará una estimación personalizada basada en tus datos reales.
+      </p>
+
+      <p>
+        Para acelerar el déficit sin sufrir, probá sumar <a href="#rucking">rucking suave</a> o la caminata sostenida diaria.
+
       </p>
     </article>
 
   </div>
 
   <p class="section-sub" style="margin-top: 1rem;">
-    La caminata es más poderosa de lo que parece: combina movimiento, déficit calórico, claridad mental y constancia. Con pequeñas mejoras semanales, los resultados se acumulan y se vuelven estables sin sentir que estás “a dieta” o “entrenando duro”.
+    El déficit calórico no tiene por qué sentirse como una lucha. Cuando combinás movimiento sostenible, fuerza simple y alimentación de saciedad, el proceso se vuelve natural y predecible. Y eso es lo que buscamos en ViveActivo: un método que puedas mantener años, no semanas.
+  </p>
+</section>
+<!-- ARTÍCULO: Rucking -->
+<section id="rucking" class="section">
+  <h2 class="section-title">Rucking: caminar con peso para quemar más energía</h2>
+
+  <p class="section-sub">
+    El rucking es una forma simple de aumentar el gasto calórico: se trata de caminar
+    llevando peso adicional, normalmente en una mochila. No es correr, no es una
+    marcha militar obligatoria; es una herramienta que puede adaptarse a casi cualquier
+    nivel si se usa con criterio.
   </p>
 
+  <div class="cards-grid">
+
+    <article class="card-simple">
+      <h3>¿Qué es exactamente el rucking?</h3>
+      <p>
+        En términos simples, es caminar con una mochila con peso. Ese peso extra hace
+        que el cuerpo gaste más energía para realizar el mismo movimiento.
+      </p>
+      <ul class="list">
+        <li><strong>No requiere equipamiento especial:</strong> una mochila resistente y peso estable.</li>
+        <li><strong>No exige correr:</strong> el ritmo suele ser el de una caminata rápida.</li>
+        <li><strong>Es progresivo:</strong> se puede empezar con poco peso e ir subiendo con el tiempo.</li>
+      </ul>
+      <p>
+        Es una forma accesible de sumar “intensidad inteligente” a la caminata sin
+        entrar en entrenamientos extremos.
+      </p>
+    </article>
+
+    <article class="card-simple">
+      <h3>Cómo empezar con rucking de forma segura</h3>
+      <p>
+        No hace falta cargar mucho peso desde el primer día. De hecho, es mejor
+        arrancar liviano y escuchar al cuerpo.
+      </p>
+      <ul class="list">
+        <li><strong>Peso inicial sugerido:</strong> entre el 5% y el 10% del peso corporal.</li>
+        <li><strong>Superficie:</strong> terreno plano y conocido, como veredas o parques.</li>
+        <li><strong>Postura:</strong> ajustar bien las correas de la mochila para que el peso quede cerca del cuerpo.</li>
+        <li><strong>Duración:</strong> 15–20 minutos al principio, 1 a 3 veces por semana.</li>
+      </ul>
+      <p>
+        Si aparecen molestias en rodillas, espalda o tobillos, conviene reducir peso,
+        tiempo o ambas cosas.
+      </p>
+    </article>
+
+    <article class="card-simple">
+      <h3>Cómo encaja el rucking en ViveActivo</h3>
+      <p>
+        En ViveActivo, el rucking es una herramienta opcional para quienes ya se sienten
+        cómodos con la caminata y quieren un poco más de intensidad sin correr.
+      </p>
+      <ul class="list">
+        <li>Se puede usar 1 o 2 veces por semana como “sesión fuerte”.</li>
+        <li>Ayuda a aumentar el gasto calórico sin necesidad de agregar más días de entrenamiento.</li>
+        <li>Trabaja piernas, glúteos y zona media de forma natural.</li>
+      </ul>
+      <p>
+        <a href="#calculadoras">Usar las calculadoras de caminata</a> sirve como referencia del gasto
+        energético; el rucking suma un extra que, a futuro, también se puede estimar en nuevas herramientas.
+      </p>
+    </article>
+
+  </div>
+
+  <p class="section-sub" style="margin-top: 1rem;">
+    El rucking no es obligatorio ni mágico, pero puede ser una pieza muy útil dentro de
+    un plan de movimiento realista. Combinado con caminatas suaves, algo de fuerza y un
+    déficit calórico razonable, ayuda a acelerar el proceso sin convertir la vida diaria
+    en una rutina de entrenamiento extremo.
+  </p>
 </section>
+
 
     <section class="section">
       <h2 class="section-title">Por qué existe ViveActivo</h2>
