--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>ViveActivo – Entrená en menos tiempo</title>
+  <title>ViveActivo – Bienestar simple: déficit calórico, caminata, rucking y hábitos sostenibles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO base -->
   <meta
     name="description"
-    content="ViveActivo te da herramientas simples para entrenar en menos tiempo y entender tu gasto calórico caminando, con foco en hábitos sostenibles para gente real."
+    content="ViveActivo es un método simple y sostenible para mejorar tu salud. Guías claras sobre déficit calórico, caminata, rucking y hábitos que funcionan en la vida real, más herramientas para medir tu progreso sin complicarte."
   />
+  <meta
+    name="keywords"
+    content="déficit calórico, caminata, rucking, bajar de peso caminando, salud simple, bienestar sostenible, hábitos saludables, perder grasa, método fácil de salud, guía para caminar, entrenamiento minimalista"
+  />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://viveactivo.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="ViveActivo – Bienestar simple y sostenible" />
+  <meta property="og:description" content="Déficit calórico, caminata, rucking y hábitos simples para mejorar tu salud sin complicarte." />
+  <meta property="og:image" content="https://viveactivo.com/images/og-image.jpg" />
+  <meta property="og:url" content="https://viveactivo.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ViveActivo – Bienestar simple y sostenible" />
+  <meta name="twitter:description" content="Déficit calórico, caminata, rucking y hábitos simples para progresar sin complicarte." />
+  <meta name="twitter:image" content="https://viveactivo.com/images/og-image.jpg" />
 
   <!-- Tipografía de Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,18 +94,16 @@
     }
 
     .logo-img {
-  height: 140px;   /* antes 72px */
-  width: auto;
-  display: block;
-}
+      height: 140px;
+      width: auto;
+      display: block;
+    }
 
-/* En mobile también bastante grande para que se lea bien */
-@media (max-width: 768px) {
-  .logo-img {
-    height: 96px;  /* antes 48px */
-  }
-}
-
+    @media (max-width: 768px) {
+      .logo-img {
+        height: 96px;
+      }
+    }
 
     .logo-icon {
       font-size: 1.25rem;
@@ -536,17 +556,17 @@
       }
     }
   </style>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-X791HK4NMY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-X791HK4NMY');
-</script>
-
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X791HK4NMY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-X791HK4NMY');
+  </script>
 </head>
+
 <body>
   <div class="page">
     <!-- HEADER -->
