--- a/index.html
+++ b/index.html
@@ -1117,6 +1117,9 @@ despejar la mente sin rutinas extremas.
 
   <p class="section-sub">
     El déficit calórico es el pilar más importante para bajar de peso. No importa el plan, la dieta o el ejercicio: si no existe déficit, no hay pérdida de grasa. Y lo mejor es que se puede lograr de manera simple, sin dietas estrictas ni entrenamientos agotadores.
+
+Para profundizar, podés leer la 
+  <a href="deficit-calorico.html">guía completa de déficit calórico</a>, hecha para personas reales.
   </p>
 
   <div class="cards-grid">
