--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
     content="déficit calórico, caminata, rucking, bajar de peso caminando, salud simple, bienestar sostenible, hábitos saludables, perder grasa, método fácil de salud, guía para caminar, entrenamiento minimalista"
   />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://viveactivo.com/" />
+   <!-- Canonical -->
+  <link rel="canonical" href="https://gburckas-dot.github.io/ViveActivo/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="ViveActivo – Bienestar simple y sostenible" />
-  <meta property="og:description" content="Déficit calórico, caminata, rucking y hábitos simples para mejorar tu salud sin complicarte." />
-  <meta property="og:image" content="https://viveactivo.com/images/og-image.jpg" />
-  <meta property="og:url" content="https://viveactivo.com/" />
-  <meta property="og:type" content="website" />
+  <meta property="og:title" content="ViveActivo – Bienestar simple: déficit calórico, caminata, rucking y hábitos sostenibles" />
+  <meta property="og:description" content="ViveActivo es un método simple y sostenible para mejorar tu salud con déficit calórico, caminata, rucking y hábitos que podés sostener en la vida real." />
+  <meta property="og:image" content="https://gburckas-dot.github.io/ViveActivo/logo-viveactivo.png" />
+  <meta property="og:url" content="https://gburckas-dot.github.io/ViveActivo/" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
