--- a/index.html
+++ b/index.html
@@ -556,15 +556,16 @@
     }
   </style>
 
-  <!-- Google tag (gtag.js) - GA4 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3T1REF7G4T"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X791HK4NMY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-3T1REF7G4T');
 
+  gtag('config', 'G-X791HK4NMY');
 </script>
+
 
 </head>
 
