--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>ViveActivo – Bienestar simple: déficit calórico, caminata, rucking y hábitos sostenibles</title>
+  <title>ViveActivo – Pequeños pasos, grandes cambios</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- SEO base -->
   <meta
     name="description"
-    content="ViveActivo es un método simple y sostenible para mejorar tu salud. Guías claras sobre déficit calórico, caminata, rucking y hábitos que funcionan en la vida real, más herramientas para medir tu progreso sin complicarte."
+    content="ViveActivo es un método simple y sostenible para mejorar tu salud. Pequeños pasos, grandes cambios: caminata, déficit calórico, rucking y hábitos que podés sostener en la vida real."
   />
   <meta
     name="keywords"
     content="déficit calórico, caminata, rucking, bajar de peso caminando, salud simple, bienestar sostenible, hábitos saludables, perder grasa, método fácil de salud, guía para caminar, entrenamiento minimalista"
   />
 
-   <!-- Canonical -->
+  <!-- Canonical -->
   <link rel="canonical" href="https://gburckas-dot.github.io/ViveActivo/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="ViveActivo – Bienestar simple: déficit calórico, caminata, rucking y hábitos sostenibles" />
-  <meta property="og:description" content="ViveActivo es un método simple y sostenible para mejorar tu salud con déficit calórico, caminata, rucking y hábitos que podés sostener en la vida real." />
-  <meta property="og:image" content="https://gburckas-dot.github.io/ViveActivo/logo-viveactivo.png" />
+  <meta property="og:title" content="ViveActivo – Pequeños pasos, grandes cambios" />
+  <meta property="og:description" content="Bienestar simple, caminata, déficit calórico, rucking y hábitos que podés sostener en la vida real. Pequeños pasos, grandes cambios." />
+  <meta property="og:image" content="https://gburckas-dot.github.io/ViveActivo/imagen_destacada.jpg" />
   <meta property="og:url" content="https://gburckas-dot.github.io/ViveActivo/" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ViveActivo – Bienestar simple y sostenible" />
-  <meta name="twitter:description" content="Déficit calórico, caminata, rucking y hábitos simples para progresar sin complicarte." />
-  <meta name="twitter:image" content="https://viveactivo.com/images/og-image.jpg" />
+  <meta name="twitter:title" content="ViveActivo – Pequeños pasos, grandes cambios" />
+  <meta name="twitter:description" content="Bienestar simple, caminata, déficit calórico, rucking y hábitos sostenibles. Mejorá tu vida un paso a la vez." />
+  <meta name="twitter:image" content="https://gburckas-dot.github.io/ViveActivo/imagen_destacada.jpg" />
 
   <!-- Tipografía de Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
