--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <!-- Open Graph -->
   <meta property="og:title" content="ViveActivo – Pequeños pasos, grandes cambios" />
   <meta property="og:description" content="Bienestar simple, caminata, déficit calórico, rucking y hábitos que podés sostener en la vida real. Pequeños pasos, grandes cambios." />
-  <meta property="og:image" content="https://gburckas-dot.github.io/ViveActivo/imagen_destacada.jpg" />
+  <meta property="og:image" content="https://gburckas-dot.github.io/ViveActivo/imagen_destacada.png" />
   <meta property="og:url" content="https://gburckas-dot.github.io/ViveActivo/" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="ViveActivo – Pequeños pasos, grandes cambios" />
   <meta name="twitter:description" content="Bienestar simple, caminata, déficit calórico, rucking y hábitos sostenibles. Mejorá tu vida un paso a la vez." />
-  <meta name="twitter:image" content="https://gburckas-dot.github.io/ViveActivo/imagen_destacada.jpg" />
+  <meta name="twitter:image" content="https://gburckas-dot.github.io/ViveActivo/imagen_destacada.png" />
 
   <!-- Tipografía de Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
