--- a/index.html
+++ b/index.html
@@ -573,18 +573,19 @@
   <div class="page">
     <!-- HEADER -->
     <header class="header">
-      <div class="logo">
-        <img src="logo-viveactivo.png" alt="ViveActivo logo" class="logo-img">
-      </div>
-      <div class="header-cta">
-        <button class="btn btn-ghost" onclick="document.getElementById('calculadoras').scrollIntoView({behavior:'smooth'})">
-          Ver calculadoras
-        </button>
-        <button class="btn btn-primary" onclick="document.getElementById('calculadoras').scrollIntoView({behavior:'smooth'})">
-          Empezar ahora →
-        </button>
-      </div>
-    </header>
+  <div class="logo">
+    <img src="logo-viveactivo.png" alt="ViveActivo logo" class="logo-img">
+  </div>
+  <div class="header-cta">
+    <button class="btn btn-ghost" onclick="document.getElementById('calculadoras').scrollIntoView({behavior:'smooth'})">
+      Ver calculadoras
+    </button>
+    <a class="btn btn-primary" href="calcular-calorias.html">
+      Calcular calorías consumidas →
+    </a>
+  </div>
+</header>
+
 
     <!-- HERO -->
     <section class="hero">
